# open-intelligence

./: .gitignore  Dockerfile  Makefile  README.md  bun.lockb  docker-compose.yml  main.py  nginx.conf  package.json  pyproject.toml  requirements.txt
chat/: Dockerfile  package.json
chat/backend/open_webui/: __init__.py  config.py  env.py  functions.py  main.py
chat/backend/open_webui/internal/: db.py  wrappers.py
chat/backend/open_webui/migrations/: env.py
chat/backend/open_webui/models/: auths.py  channels.py  chats.py  feedbacks.py  files.py  folders.py  functions.py  groups.py  knowledge.py  messages.py  models.py  prompts.py  tags.py  tools.py  (+1 more)
prisma/: schema.prisma
server/: __init__.py
server/api/: __init__.py  models.py
server/api/audio/: __init__.py  speech.py
server/api/batches/: schema.py
server/api/chat/: __init__.py  completions.py
server/api/completions/: __init__.py  handler.py
server/api/embeddings/: handler.py  repository.py
server/api/files/: handler.py
server/api/images/: __init__.py  generations.py  handler.py  schema.py  service.py  utils.py
server/api/models/: handler.py  repository.py  service.py
server/api/search/: handler.py  schemas.py
server/api/vector_stores/: handler.py  repository.py  service.py
server/lib/: lib.py  proto.py  resource.py
server/lib/common/: email.py  pubsub.py  storage.py
web/: bun.lockb  package.json
web/src/: App.tsx
web/src/components/: Feature.tsx  Footer.tsx  Header.tsx  Hero.tsx  Installation.tsx  Models.tsx  Usage.tsx
web/src/pages/: index.tsx
web/src/styles/: main.css
(+65 files in other folders)
