[tool.poetry]
name = "openai"
version = "0.0.1"
description = "OpenAI in a Box"
authors = ["Oscar Bahamonde <oscar.bahamonde.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.36.12"
boto3-stubs = {extras = ["all"], version = "^1.36.12"}
groq = "^0.17.0"
fastapi = {extras = ["all"], version = "^0.115.8"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
openai = "^1.61.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
